fix(frontend): still trying to figure out field(set) spacing

--- a/packages/frontend/components/checkboxes/styles.css
+++ b/packages/frontend/components/checkboxes/styles.css
@@ -1,6 +1,7 @@
 .checkboxes {
   --checkbox-size: 1.5em;
   --check-size: 0.875em;
+  --fieldset-flow-space: 0;
   --touch-target-size: 44px;
 }
 
